5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1642_87.log
== SUBMITION (2019-06-26 14:36:39) 
-- CODE:
=float(input())
s=input()

ph=72.7*h - 58
pm=62.1*h - 44.7

if (s=='M'):
	print(round(ph,2))
else:
	print(round(pm,2))
-- EXECUTION TIME:
0.880078
-- ERROR:
  File "/home/codebench/codes/1642/87/main.py", line 1
    =float(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:36:51) 
-- CODE:
h=float(input())
s=input()

ph=72.7*h - 58
pm=62.1*h - 44.7

if (s=='M'):
	print(round(ph,2))
else:
	print(round(pm,2))
-- EXECUTION TIME:
0.852713
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
15977.1
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
6103.2
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
7593.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:36:58) 
-- CODE:
h=float(input())
s=input()

ph=72.7*h - 58
pm=62.1*h - 44.7

if (s=='M'):
	print(round(ph,2))
else:
	print(round(pm,2))
-- EXECUTION TIME:
0.607766
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
15977.1
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
6103.2
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
7593.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:37:27) 
-- CODE:
a=int(input())
b=int(input())
c=int(input())

if (a<b<c) or (a<c<b):
	print(a)
if (b<a<c) or (b<c<a):
	print(b)
if (c<a<b) or (c<b<a):
	print(c)
-- EXECUTION TIME:
0.658519
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
